crates/cpg-schema/tests/snapshots/contracts__model_argument_bindings.snap
---
source: crates/cpg-schema/tests/contracts.rs
expression: text
---
table model_argument_bindings
family findings
key snapshot_id, call_site_node_id, pysa_fact_id, model_id, rule_id, path_role, path_id
@lctx.family=findings
@lctx.table=model_argument_bindings
snapshot_id: FixedSizeBinary(16) NOT NULL
call_site_node_id: FixedSizeBinary(16) NOT NULL
pysa_fact_id: FixedSizeBinary(16) NOT NULL
model_id: FixedSizeBinary(16) NOT NULL
target_node_id: FixedSizeBinary(16) NOT NULL
rule_id: FixedSizeBinary(16) NOT NULL
path_role: Int16 NOT NULL [lctx.codebook=model_path_role]
path_id: FixedSizeBinary(16) NOT NULL
formal_name: Utf8 NOT NULL
signature_count: Int64 NOT NULL
matched_signatures: Int64 NOT NULL
argument_node_id: FixedSizeBinary(16) NULL
argument_fact_id: FixedSizeBinary(16) NULL
status: Int16 NOT NULL [lctx.codebook=model_argument_status]
reason: Int16 NULL [lctx.codebook=boundary_reason]
