crates/cpg-schema/tests/snapshots/contracts__model_effects.snap
---
source: crates/cpg-schema/tests/contracts.rs
expression: text
---
table model_effects
family findings
key snapshot_id, model_id, target_node_id, rule_id
check revision_positive: revision > 0
@lctx.family=findings
@lctx.table=model_effects
snapshot_id: FixedSizeBinary(16) NOT NULL
model_id: FixedSizeBinary(16) NOT NULL
target_node_id: FixedSizeBinary(16) NOT NULL
rule_id: FixedSizeBinary(16) NOT NULL
target_definition_fact_id: FixedSizeBinary(16) NOT NULL
revision: Int64 NOT NULL
effect: Int16 NOT NULL [lctx.codebook=model_effect_kind]
argument: Utf8 NULL
schema_kind: Int16 NULL [lctx.codebook=model_schema_kind]
schema_class_node_id: FixedSizeBinary(16) NULL
schema_class_fact_id: FixedSizeBinary(16) NULL
schema_path_id: FixedSizeBinary(16) NULL
schema_path_kind: Int16 NULL [lctx.codebook=model_path_kind]
subject_path_id: FixedSizeBinary(16) NULL
subject_path_kind: Int16 NULL [lctx.codebook=model_path_kind]
subject_path: Utf8 NULL
modality: Int16 NOT NULL [lctx.codebook=modality]
origin: Int16 NOT NULL [lctx.codebook=origin]
