crates/cpg-schema/tests/snapshots/contracts__model_frame_exit_arguments.snap
---
source: crates/cpg-schema/tests/contracts.rs
expression: text
---
table model_frame_exit_arguments
family findings
key snapshot_id, frame_exit_id, ordinal
check ordinal_nonnegative: ordinal >= 0
check qualified: safety <> 2
@lctx.family=findings
@lctx.table=model_frame_exit_arguments
snapshot_id: FixedSizeBinary(16) NOT NULL
frame_exit_id: FixedSizeBinary(16) NOT NULL
ordinal: Int64 NOT NULL
argument_fact_id: FixedSizeBinary(16) NOT NULL
expression_fact_id: FixedSizeBinary(16) NOT NULL
safety: Int16 NOT NULL [lctx.codebook=release_safety]
parameter_name: Utf8 NOT NULL
expression_offset: Int64 NOT NULL
expression_count: Int64 NOT NULL
expression_digest: FixedSizeBinary(32) NOT NULL
parameters_digest: FixedSizeBinary(32) NOT NULL
