crates/cpg-schema/tests/snapshots/contracts__model_frame_exits.snap
---
source: crates/cpg-schema/tests/contracts.rs
expression: text
---
table model_frame_exits
family findings
key snapshot_id, frame_exit_id
check bounded_arguments: argument_count >= 0 AND argument_count <= 128
@lctx.family=findings
@lctx.table=model_frame_exits
snapshot_id: FixedSizeBinary(16) NOT NULL
frame_exit_id: FixedSizeBinary(16) NOT NULL
function_node_id: FixedSizeBinary(16) NOT NULL
call_node_id: FixedSizeBinary(16) NOT NULL
call_fact_id: FixedSizeBinary(16) NOT NULL
syntax_fact_id: FixedSizeBinary(16) NOT NULL
target_node_id: FixedSizeBinary(16) NOT NULL
pysa_fact_id: FixedSizeBinary(16) NOT NULL
model_id: FixedSizeBinary(16) NOT NULL
return_parameter: Utf8 NOT NULL
return_argument_fact_id: FixedSizeBinary(16) NOT NULL
argument_count: Int64 NOT NULL
signature_count: Int64 NOT NULL
arguments_digest: FixedSizeBinary(32) NOT NULL
invocation_count: Int64 NOT NULL
invocation_digest: FixedSizeBinary(32) NOT NULL
