crates/cpg-schema/tests/snapshots/contracts__model_resources.snap
---
source: crates/cpg-schema/tests/contracts.rs
expression: text
---
table model_resources
family findings
key snapshot_id, model_id, target_node_id, rule_id
check revision_positive: revision > 0
@lctx.family=findings
@lctx.table=model_resources
snapshot_id: FixedSizeBinary(16) NOT NULL
model_id: FixedSizeBinary(16) NOT NULL
target_node_id: FixedSizeBinary(16) NOT NULL
rule_id: FixedSizeBinary(16) NOT NULL
target_definition_fact_id: FixedSizeBinary(16) NOT NULL
revision: Int64 NOT NULL
resource_path_id: FixedSizeBinary(16) NOT NULL
resource_path: Utf8 NOT NULL
resource_role: Int16 NOT NULL [lctx.codebook=model_path_role]
resource_path_kind: Int16 NOT NULL [lctx.codebook=model_path_kind]
action: Int16 NOT NULL [lctx.codebook=model_resource_action]
exit: Int16 NOT NULL [lctx.codebook=model_exit]
modality: Int16 NOT NULL [lctx.codebook=modality]
origin: Int16 NOT NULL [lctx.codebook=origin]
